scroll fixed, now spacing?

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -168,6 +168,8 @@
   .projectThree,
   .projectFour {
     img {
+      width: 100%;
+      height: 400px;
       object-fit: cover;
     }
   }
