--- a/styles/sass/_portfolio.scss
+++ b/styles/sass/_portfolio.scss
@@ -9,6 +9,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   overflow:hidden;
+  padding: 0% 1%;
 }
 
 .projectOne,
